# 2025-Mujra

./: README.md  example.json  flow_qubo.py  network_flow.ipynb  pyproject.toml
AI-ML/backend/: trainmodel.py
AI-ML/data/: meta.json  region_data.csv
ML-model/backend/: dataset.py  floodpredict.py  samplerainfallapi.py  scaler.pkl
ML-model/data/: dubai_flood_dataset_20k.csv  rainfalldatalive.csv  region_flood_predictions.csv
mujra_web/: index.html
mujra_web/src/: App.tsx
mujra_web/src/utils/: dataGenerator.ts
quantum-model/: dubai.json  flow_annealing.py  flow_qubo.py  network_flow.ipynb  pyproject.toml
src/: App.tsx
src/components/: CollapsibleMap.tsx  InteractiveMap.tsx  RiskOverview.tsx
src/styles/: global.ts
src/types/: index.ts
web-app/: index.html  package-lock.json  package.json
web-app/src/: main.tsx
web-app/src/components/: CollapsibleMap.tsx  DrainageNetwork.tsx  EmiratesSelector.tsx  InteractiveMap.tsx  MapAnimations.tsx  RiskOverview.tsx
web-app/src/utils/: networkUtils.ts
